8282590: C2: assert(addp->is_AddP() && addp->outcnt() > 0) failed: Don't process dead nodes